--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^6.8.0"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
   "name": "social-media-api",
   "description": "",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
+    "scripts": {
+    "start": "node server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/deadseal001/social-media-API.git"
   },
   "author": "Wenbo Li",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/deadseal001/social-media-API/issues"
-  },
-  "homepage": "https://github.com/deadseal001/social-media-API#readme"
+  "homepage": "https://github.com/deadseal001/social-media-API#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.0"
+  }
 }
